# virtpy

./: README.md  pyproject.toml  pyprproject.toml
docs/: manual.md  pydroid_limitations.md
virtpy/: __init__.py
virtpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
